# sigun

./: .gitignore  .taplo.toml  Cargo.toml  README.md  example.config.toml
.sqlx/: query-7df05b42c2c41716eb4d6c083f4e4e1e61a61496b55a576414143038960d2338.json  query-8a2c30b64fbf8162099f8fc0a012f8d538f837f723544ce3fbdd65a5ca3844cc.json  query-8b59f0563a34402f3d1147496d68253f642a5cedc7daeda31791016b4dbe3ce3.json  query-9d4a1d43810a37c0491f1c585d708796caea3d4baa9ac2192ce4d620b8c308e8.json
api/: Cargo.toml
api/src/: error.rs  lib.rs
api/src/route/: auth.rs  media.rs  mod.rs
config/: Cargo.toml
config/src/: error.rs  lib.rs
config/tests/: invalid.toml  missing.toml  valid.toml
migrations/: 20240417174250_init.sql
service/: Cargo.toml
service/src/: auth.rs  error.rs  lib.rs  media.rs
service/src/dto/: auth.rs  delete.rs  mod.rs  upload.rs
