[package]
name = "sigun"
version = "0.0.2"
authors = ["Mücahit Kurtlar"]
edition = "2021"
description = "Lightweight file server."
readme = "README.md"
repository = "https://github.com/mucahitkurtlar/sigun"
license = "GPL-3.0"
keywords = ["lightweight", "file", "server"]

[workspace]
members = [".", "api", "config", "service"]

[dependencies]
api = { path = "api" }
