[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["multipart"] }
config = { path = "../config" }
service = { path = "../service" }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
