[package]
name = "service"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
config = { path = "../config" }
mime = "0.3.17"
rand = "0.8.5"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "sqlite",
    "time",
] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
